NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Details__c/CONTAINER_Commissioning_Details__c.object-meta.xml
<CustomObject>
    <description>This Object is being used for CONTAINER Commissioning Shipment details.</description>
    <label>Commissioning Shipment</label>
    <nameField>
        <displayFormat>CSD-{0000}</displayFormat>
        <label>Commissioning Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissioning Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>