NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Details__c/fields/CONTAINER_Commissioning__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commissioning__c</fullName>
    <description>Master Detail relationship between Commissioning and Commissioning Shipment Detail</description>
    <label>Commissioning</label>
    <referenceTo>CONTAINER_Commissionig__c</referenceTo>
    <relationshipName>Commissioning_Shipment_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>