NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Details__c/fields/CONTAINER_Commissioning_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commissioning_Invoice_Number__c</fullName>
    <description>This field is to populate Commissioning Invoice Record</description>
    <label>Commissioning Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>