NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Details__c/fields/CONTAINER_Completed_Job__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Completed_Job__c</fullName>
    <description>This field will capture Completed job</description>
    <label>Completed Job</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>