NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Details__c/fields/CONTAINER_Customer__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Commissioning_Shipment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>