NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Details__c/fields/CONTAINER_Quantity_Shipped__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Quantity_Shipped__c</fullName>
    <description>This field will populate Quantity shipped.</description>
    <label>Quantity Shipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>