NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Details__c/fields/CONTAINER_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Shipment_Date__c</fullName>
    <description>Shipment created date.</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipment Date</label>
    <type>Date</type>
</CustomField>