NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Details__c/validationRules/CONTAINER_QtyShippedExceed_JobQty_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>CONTAINER_QtyShippedExceed_JobQty_Create</fullName>
    <active>true</active>
    <description>CONTAINER Quantity Shipped Exceed Job Qyantity</description>
    <errorConditionFormula>AND(
NOT( $Permission.CONTAINER_Bypass_Validation_Rule ),
ISNEW(), 
(CONTAINER_Commissioning__r.CONTAINER_Quantity_Shipped__c  + CONTAINER_Quantity_Shipped__c ) &gt;  CONTAINER_Commissioning__r.CONTAINER_Job_Quantity__c 
)</errorConditionFormula>
    <errorMessage>Commissioning quantity shipped value cannot exceed  commissioning job quantity.</errorMessage>
</ValidationRule>