NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Details__c/validationRules/CONTAINER_QtyShippedExceed_JobQty_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>CONTAINER_QtyShippedExceed_JobQty_Update</fullName>
    <active>true</active>
    <description>CONTAINER QtyShipped Exceed JobQty on Update</description>
    <errorConditionFormula>AND(
NOT( $Permission.CONTAINER_Bypass_Validation_Rule ),
ISCHANGED(CONTAINER_Quantity_Shipped__c ), 
(CONTAINER_Commissioning__r.CONTAINER_Quantity_Shipped__c  + CONTAINER_Quantity_Shipped__c -  PRIORVALUE(CONTAINER_Quantity_Shipped__c)) &gt;  CONTAINER_Commissioning__r.CONTAINER_Job_Quantity__c 
)</errorConditionFormula>
    <errorMessage>Commissioning quantity shipped value cannot exceed  commissioning job quantity.</errorMessage>
</ValidationRule>