NATTQA-ENV/force-app/main/default/objects/CONTAINER_Commissioning_Details__c/validationRules/CONTAINER_QuantityShipped_Cannnot_0.validationRule-meta.xml
<ValidationRule>
    <fullName>CONTAINER_QuantityShipped_Cannnot_0</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Permission.CONTAINER_Bypass_Validation_Rule),
CONTAINER_Quantity_Shipped__c &lt;=0
)</errorConditionFormula>
    <errorMessage>Quantity Shipped cannot be 0.</errorMessage>
</ValidationRule>